--- a/catalog.html
+++ b/catalog.html
@@ -11,20 +11,20 @@
 <body>
     <header class="main-heder">
         <nav class="main-navigation">
-            <a class="main-header-logo">
+            <a class="main-header-logo" href="index.html">
                 <img src="" alt="Логотип дизайн студии Nerds">
             </a>
-            <ul class="site-navigation">
-                <li>
+            <ul class="navigation-list">
+                <li class="navigation-item">
                     <a href="#">Студия</a>
                 </li>
-                <li>
+                <li class="navigation-item">
                     <a href="#">Клиенты</a>
                 </li>
-                <li>
-                    <a href="catalog.html">Магазин</a>
+                <li class="navigation-item">
+                    <a>Магазин</a>
                 </li>
-                <li>
+                <li class="navigation-item">
                     <a href="#">Контакты</a>
                 </li>
             </ul>
@@ -36,7 +36,169 @@
 
     </header>
     <main class="container">
+        <h1>Магазин готовых шаблонов</h1>
+        <section class="filters">
+            <h2 class="visually-hidden">Фильтр товаров</h2>
+            <form class="filter" method="get" action="http://echo.htmlacademy.ru">
+                <fieldset class="filter-price">
+                    <legend>Стоимость:</legend>
+                    <input id="slider-left" type='number' , value='0' , min='0' , max='20000'>
+                    <label for="slider-left">От</label>
+                    <input id="slider-right" type='number' , value='15000' , min='0' , max='20000'>
+                    <label for="slider-right">До</label>
+                    <input value='0' , min='0' , max='20000' , step='500' , type='range'>
+                    <input value='15000' , min='0' , max='20000' , step='500' , type='range'>
+                </fieldset>
+                <fieldset class="filter-grid">
+                    <legend>Сетка:</legend>
+                    <ul>
+                        <li class="filter-option">
+                            <input class="visually-hidden filter-input filter-input-radio" type="radio"
+                                id="filter-adaptive" name="grid-type" value="adaptive" checked>
+                            <label for="filter-adaptive">Адаптивная</label>
+                        </li>
+                        <li class="filter-option">
+                            <input class="visually-hidden filter-input filter-input-radio" type="radio"
+                                id="filter-fixed" name="grid-type" value="fixed">
+                            <label for="filter-fixed">Фиксированная</label>
+                        </li>
+                        <li class="filter-option">
+                            <input class="visually-hidden filter-input filter-input-radio" type="radio"
+                                id="filter-rubber" name="grid-type" value="rubber">
+                            <label for="filter-rubber">Резиновая</label>
+                        </li>
+                    </ul>
+                </fieldset>
+                <fieldset class="filter-features">
+                    <legend>Особенности:</legend>
+                    <ul>
+                        <li>
+                            <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox"
+                                id="filter-slider" name="slider" checked>
+                            <label for="filter-slider">Слайдер</label>
+                        </li>
+                        <li>
+                            <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox"
+                                id="filter-advantage" name="advantage">
+                            <label for="filter-advantage">Блок преимуществ</label>
+                        </li>
+                        <li>
+                            <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox"
+                                id="filter-news" name="news" checked>
+                            <label for="filter-news">Новости</label>
+                        </li>
+                        <li>
+                            <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox"
+                                id="filter-gallery" name="gallery">
+                            <label for="filter-gallery">Галерея</label>
+                        </li>
+                        <li>
+                            <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox"
+                                id="filter-basket" name="basket">
+                            <label for="filter-basket">Корзина</label>
+                        </li>
+                    </ul>
 
+                </fieldset>
+                <button class="button filter-button" type="submit">Показать</button>
+            </form>
+
+        </section>
+        <section class="catalog">
+            <h2 class="visually-hidden">Список шаблонов</h2>
+            <div class="catalog-sort">
+                <span>Сортировать:</span>
+                <ul class="catalog-sort-list">
+                    <li class="catalog-sort-item catalog-sort-item-current"><a>По цене</a></li>
+                    <li class="catalog-sort-item"><a href="#">По цене</a></li>
+                    <li><a class="catalog-sort-item" href="#">По названию</a></li>
+                </ul>
+                <ul>
+                    <li><button class="button-sort-ascending button-sort-ascending-current" type="button">по убыванию</button></li>
+                    <li><button class="button-sort-ascending" type="button"> по возрастанию</button></li>
+                </ul>
+            </div>
+            <ul class="catalog-list">
+                <li class="catalog-item">
+                    <div class="catalog-item-back">
+                        <a class="catalog-item-img" href="#">
+                            <img src="" alt="">
+                        </a>
+                        <div class="catalog-item-hover">
+                            <h3>Sedona</h3>
+                            <p>Информационный сайт для туристов</p>
+                            <button class="button catalog-button" type="button">9 900 руб.</button>
+                        </div>
+                    </div>
+                </li>
+                <li class="catalog-item">
+                    <div class="catalog-item-back">
+                        <a class="catalog-item-img" href="#">
+                            <img src="" alt="">
+                        </a>
+                        <div class="catalog-item-hover">
+                            <h3>Pink App</h3>
+                            <p>Продуктовый лендинг приложения для iOS и Android</p>
+                            <button class="button catalog-button" type="button">9 900 руб.</button>
+                        </div>
+                    </div>
+                </li>
+                <li class="catalog-item">
+                    <div class="catalog-item-back">
+                        <a class="catalog-item-img" href="#">
+                            <img src="" alt="">
+                        </a>
+                        <div class="catalog-item-hover">
+                            <h3>Barbershop</h3>
+                            <p>Сайт салоны красоты. Для мужчин, да.</p>
+                            <button class="button catalog-button" type="button">9 900 руб.</button>
+                        </div>
+                    </div>
+                </li>
+                <li class="catalog-item">
+                    <div class="catalog-item-back">
+                        <a class="catalog-item-img" href="#">
+                            <img src="" alt="">
+                        </a>
+                        <div class="catalog-item-hover">
+                            <h3>MISHKA</h3>
+                            <p>Интернет-магазин вязаных игрушек</p>
+                            <button class="button catalog-button" type="button">9 900 руб.</button>
+                        </div>
+                    </div>
+                </li>
+                <li class="catalog-item">
+                    <div class="catalog-item-back">
+                        <a class="catalog-item-img" href="#">
+                            <img src="" alt="">
+                        </a>
+                        <div class="catalog-item-hover">
+                            <h3>A Plus</h3>
+                            <p>Лендинг курсов повышения квалификации</p>
+                            <button class="button catalog-button" type="button">9 900 руб.</button>
+                        </div>
+                    </div>
+                </li>
+                <li class="catalog-item">
+                    <div class="catalog-item-back">
+                        <a class="catalog-item-img" href="#">
+                            <img src="" alt="">
+                        </a>
+                        <div class="catalog-item-hover">
+                            <h3>КВАСТ</h3>
+                            <p>Промо-сайт производителя крафтового кваса</p>
+                            <button class="button catalog-button" type="button">9 900 руб.</button>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+            <ul class="pagination-list">
+                <li class="pagination-item pagination-item-current"><a>1</a></li>
+                <li class="pagination-item"><a href="#">2</a></li>
+                <li class="pagination-item"><a href="#">3</a></li>
+                <li class="pagination-item pagination-item-next"><a href="#">Следующая</a></li>
+            </ul>
+        </section>
     </main>
     <footer>
         <iframe
