Добавил контентные изображения

--- a/catalog.html
+++ b/catalog.html
@@ -110,7 +110,7 @@
                 <span>Сортировать:</span>
                 <ul class="catalog-sort-list">
                     <li class="catalog-sort-item catalog-sort-item-current"><a>По цене</a></li>
-                    <li class="catalog-sort-item"><a href="#">По цене</a></li>
+                    <li class="catalog-sort-item"><a href="#">По типу</a></li>
                     <li><a class="catalog-sort-item" href="#">По названию</a></li>
                 </ul>
                 <ul>
