--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="main-heder">
         <nav class="main-navigation">
             <a class="main-header-logo">
-                <img src="" alt="Логотип дизайн студии Nerds">
+                <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип дизайн студии Nerds">
             </a>
             <ul class="site-navigation">
                 <li>
@@ -61,19 +61,19 @@
                 <h2 class="slider-slogan">Долго, дорого, скурпулезно</h2>
                 <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
                 <a class="button feedback-button" href="">Узнать больше</a>
-                <img src="" alt="Изображение смартфонов">
+                <img src="img/slide1.png" width="698" height="413" alt="Изображение смартфонов">
             </div>
             <div>
                 <h2 class="slider-slogan">Любим математику как никто другой</h2>
                 <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
                 <a class="button feedback-button" href="">Узнать больше</a>
-                <img src="" alt="Изображение мониторов">
+                <img src="img/slide2.png" width="663" height="430" alt="Изображение мониторов">
             </div>
             <div>
                 <h2 class="slider-slogan">Только ночь, только хардкор</h2>
                 <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
                 <a class="button feedback-button" href="">Узнать больше</a>
-                <img src="" alt="Изображение планшета и смартфона">
+                <img src="img/slide3.png" width="759" height="411" alt="Изображение планшета и смартфона">
             </div>
         </section>
 
@@ -84,19 +84,19 @@
                 <li class="services-item">
                     <h3>Веб-сайты</h3>
                     <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-                    <img src="" alt="">
+                    <img src="img/illustration-1.png" width="300" height="146" alt="">
                     <button class="button services-button services-button-red" type="button">Заказать</button>
                 </li>
                 <li class="services-item">
                     <h3>Приложения</h3>
                     <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-                    <img src="" alt="">
+                    <img src="img/illustration-2.png" width="300" height="146" alt="">
                     <button class="button services-button services-button-green" type="button">Заказать</button>
                 </li>
                 <li class="services-item">
                     <h3>Презентации</h3>
                     <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-                    <img src="" alt="">
+                    <img src="img/illustration-3.png" width="300" height="146" alt="">
                     <button class="button services-button services-button-yellow" type="button">Заказать</button>
                 </li>
             </ul>
@@ -113,7 +113,7 @@
                 <li class="about_us-services-item">Мобильных приложений для iOS и Android</li>
                 <li class="about_us-services-item">Слайдшоу и видео для корпоративных презентаций</li>
             </ul>
-            <img class="about_us_logo" src="" alt="">
+            <img class="about_us_logo" src="img/nerds-illustration.png" width="360" height="208" alt="Логотип компании">
             <p>с 2004 года Любим точность во всем:</p>
             <ul class="about_us-list">
                 <li class="about_us-item">
@@ -134,24 +134,33 @@
             <h2 class="visually-hidden">Наши партнеры</h2>
             <ul class="partners-list">
                 <li class="partners-item">
-                    <a href="#">Html academy</a>
+                    <a href="#">
+                        <img src="img/logo-1.png" width="199" height="68" alt="Интерактивные онлайн-курсы htmlacademy">
+                    </a>
                 </li>
                 <li class="partners-item">
-                    <a href="#">Barbershop borodinski</a>
+                    <a href="#">
+                        <img src="img/logo-2.png" width="209" height="90" alt="Барбершоп Borodinski">
+                    </a>
                 </li>
                 <li class="partners-item">
-                    <a href="#">Pink</a>
+                    <a href="#">
+                        <img src="img/logo-3.png" width="185" height="52" alt="Pink">
+                    </a>
                 </li>
                 <li class="partners-item">
-                    <a href="#">Mishka</a>
+                    <a href="#">
+                        <img src="img/logo-4.png" width="173" height="84" alt="Mishka">
+                    </a>
                 </li>
             </ul>
         </section>
    </main>
     <footer>
-        <iframe
+        <img src="img/map group.jpg" width="1440" height="416" alt="Наша компания расположенна по адресу г.Санкт-Петербург, ул. Б. Конюшенная, д. 19/8.">
+        <!-- <iframe
             src="https://yandex.ru/map-widget/v1/?um=constructor%3A87a75cb30f34949c2490de44389de57343ad0a810ef9255ff4e78256d3013e46&amp;source=constructor"
-            width="100%" height="370" frameborder="0"></iframe>
+            width="100%" height="370" frameborder="0"></iframe> -->
         <div class="map-feedback">
             <h2 class="visually-hidden">Контактная информация</h2>
             <b>Nёrds design studio</b>
