--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic-ext">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Nerds</title>
 </head>
 
@@ -12,7 +15,7 @@
     <header class="main-heder">
         <nav class="main-navigation">
             <a class="main-header-logo" href="index.html">
-                <img src="" alt="Логотип дизайн студии Nerds">
+                <img src="img/nerds-logo.svg" alt="Логотип дизайн студии Nerds">
             </a>
             <ul class="navigation-list">
                 <li class="navigation-item">
@@ -21,7 +24,7 @@
                 <li class="navigation-item">
                     <a href="#">Клиенты</a>
                 </li>
-                <li class="navigation-item">
+                <li class="navigation-item navigation-current">
                     <a>Магазин</a>
                 </li>
                 <li class="navigation-item">
@@ -36,7 +39,7 @@
 
     </header>
     <main class="container">
-        <h1>Магазин готовых шаблонов</h1>
+        <h1 class="catalog-heading">Магазин готовых шаблонов</h1>
         <section class="filters">
             <h2 class="visually-hidden">Фильтр товаров</h2>
             <form class="filter" method="get" action="http://echo.htmlacademy.ru">
@@ -111,7 +114,7 @@
                 <ul class="catalog-sort-list">
                     <li class="catalog-sort-item catalog-sort-item-current"><a>По цене</a></li>
                     <li class="catalog-sort-item"><a href="#">По типу</a></li>
-                    <li><a class="catalog-sort-item" href="#">По названию</a></li>
+                    <li class="catalog-sort-item"><a href="#">По названию</a></li>
                 </ul>
                 <ul>
                     <li><button class="button-sort-ascending button-sort-ascending-current" type="button">по убыванию</button></li>
@@ -122,7 +125,7 @@
                 <li class="catalog-item">
                     <div class="catalog-item-back">
                         <a class="catalog-item-img" href="#">
-                            <img src="" alt="">
+                            <img src="/img/img-sedona.jpg" alt="'Sedona' Информационный сайт для туристов">
                         </a>
                         <div class="catalog-item-hover">
                             <h3>Sedona</h3>
@@ -134,7 +137,7 @@
                 <li class="catalog-item">
                     <div class="catalog-item-back">
                         <a class="catalog-item-img" href="#">
-                            <img src="" alt="">
+                            <img src="/img/img-pink.jpg" alt="'Pink' Продуктовый лендинг приложения для iOS и Android">
                         </a>
                         <div class="catalog-item-hover">
                             <h3>Pink App</h3>
@@ -146,7 +149,7 @@
                 <li class="catalog-item">
                     <div class="catalog-item-back">
                         <a class="catalog-item-img" href="#">
-                            <img src="" alt="">
+                            <img src="/img/img-barbershop.jpg" alt="'Borodinski' Сайт салона красоты. Для мужчин, да.">
                         </a>
                         <div class="catalog-item-hover">
                             <h3>Barbershop</h3>
@@ -158,7 +161,7 @@
                 <li class="catalog-item">
                     <div class="catalog-item-back">
                         <a class="catalog-item-img" href="#">
-                            <img src="" alt="">
+                            <img src="/img/img-mishka.jpg" alt="'Mishka'Интернет-магазин вязаных игрушек">
                         </a>
                         <div class="catalog-item-hover">
                             <h3>MISHKA</h3>
@@ -170,7 +173,7 @@
                 <li class="catalog-item">
                     <div class="catalog-item-back">
                         <a class="catalog-item-img" href="#">
-                            <img src="" alt="">
+                            <img src="/img/img-aplus.jpg" alt="'A+' Лендинг курсов повышения квалификации">
                         </a>
                         <div class="catalog-item-hover">
                             <h3>A Plus</h3>
@@ -182,7 +185,7 @@
                 <li class="catalog-item">
                     <div class="catalog-item-back">
                         <a class="catalog-item-img" href="#">
-                            <img src="" alt="">
+                            <img src="/img/img-kvast.jpg" alt="'Кваст' Промо-сайт производителя крафтового кваса">
                         </a>
                         <div class="catalog-item-hover">
                             <h3>КВАСТ</h3>
