--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="keywords" content="сайт на заказ, веб-сайты, дизайн сайтов, веб студия, дизайн-студия">
+    <meta name="description" content="Дизайн-студия "Nerds"">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic-ext">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Nerds</title>
 </head>
 
@@ -14,7 +19,7 @@
             <a class="main-header-logo">
                 <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип дизайн студии Nerds">
             </a>
-            <ul class="site-navigation">
+            <ul class="navigation-list">
                 <li>
                     <a href="#">Студия</a>
                 </li>
@@ -115,20 +120,16 @@
             </ul>
             <img class="about_us_logo" src="img/nerds-illustration.png" width="360" height="208" alt="Логотип компании">
             <p>с 2004 года Любим точность во всем:</p>
-            <ul class="about_us-list">
-                <li class="about_us-item">
-                    <b>146%</b>
-                    <p>Уровень самоотдачи</p>
-                </li>
-                <li class="about_us-item">
-                    <b>100%</b>
-                    <p>Соблюдение сроков</p>
-                </li>
-                <li class="about_us-item">
-                    <b>50%</b>
-                    <p>Минимальная предоплата</p>
-                </li>
-            </ul>
+            <dl class="about_us-list">
+                <dt class="about_us-item">146<sup>%</sup></dt>
+                <dd>Уровень самоотдачи</dd>
+
+                <dt class="about_us-item">100<sup>%</sup></dt>
+                <dd>Соблюдение сроков</dd>
+
+                <dt class="about_us-item">50<sup>%</sup></dt>
+                <dd>Минимальная предоплата</dd>
+            </dl>
         </section>
         <section class="partners">
             <h2 class="visually-hidden">Наши партнеры</h2>
@@ -155,9 +156,10 @@
                 </li>
             </ul>
         </section>
-   </main>
+    </main>
     <footer>
-        <img src="img/map group.jpg" width="1440" height="416" alt="Наша компания расположенна по адресу г.Санкт-Петербург, ул. Б. Конюшенная, д. 19/8.">
+        <img src="img/map group.jpg" width="1440" height="416"
+            alt="Наша компания расположенна по адресу г.Санкт-Петербург, ул. Б. Конюшенная, д. 19/8.">
         <!-- <iframe
             src="https://yandex.ru/map-widget/v1/?um=constructor%3A87a75cb30f34949c2490de44389de57343ad0a810ef9255ff4e78256d3013e46&amp;source=constructor"
             width="100%" height="370" frameborder="0"></iframe> -->
@@ -207,4 +209,4 @@
 
 </body>
 
-</html> 
+</html>
