--- a/index.html
+++ b/index.html
@@ -46,66 +46,52 @@
         <h1 class="visually-hidden">Дизайн-студия Nerds</h1>
         <section class="slider">
             <div class="container">
-                <div class="slider-main">
-                    <ul>
-                        <li>
-                            <input class="visually-hidden slider-input slider-input-radio" type="radio" id="slider-1"
-                                name="respond" checked>
-                            <label for="slider-1"></label>
-                        </li>
-                        <li>
-                            <input class="visually-hidden slider-input slider-input-radio" type="radio" id="slider-2"
-                                name="respond">
-                            <label for="slider-2"></label>
-                        </li>
-                        <li>
-                            <input class="visually-hidden slider-input slider-input-radio" type="radio" id="slider-3"
-                                name="respond">
-                            <label for="slider-3"></label>
-                        </li>
-                    </ul>
+                <input class="visually-hidden" type="radio" id="product-1" name="toggle" checked>
+                <input class="visually-hidden" type="radio" id="product-2" name="toggle">
+                <input class="visually-hidden" type="radio" id="product-3" name="toggle">
+                <div class="slider-controls">
+                    <label class="slider-controls-item slider-controls-item--1" for="product-1">Первый</label>
+                    <label class="slider-controls-item slider-controls-item--2" for="product-2">Второй</label>
+                    <label class="slider-controls-item slider-controls-item--3" for="product-3">Третий</label>
                 </div>
-                <div>
-                    <h2 class="slider-slogan">Долго, дорого, скурпулезно</h2>
-                    <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
-                    <a class="button feedback-button" href="">Узнать больше</a>
-                    <img src="img/slide1.png" width="698" height="413" alt="Изображение смартфонов">
-                </div>
-                <div>
-                    <h2 class="slider-slogan">Любим математику как никто другой</h2>
-                    <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
-                    <a class="button feedback-button" href="">Узнать больше</a>
-                    <img src="img/slide2.png" width="663" height="430" alt="Изображение мониторов">
-                </div>
-                <div>
-                    <h2 class="slider-slogan">Только ночь, только хардкор</h2>
-                    <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
-                    <a class="button feedback-button" href="">Узнать больше</a>
-                    <img src="img/slide3.png" width="759" height="411" alt="Изображение планшета и смартфона">
-                </div>
+                <ul class="slider-list">
+                    <li class="slider-item">
+                        <h2 class="slider-slogan">Долго, дорого,<br/> скрупулезно.</h2>
+                        <p>Математически выверенный дизайн<br/> для вашего сайта или мобильного приложения</p>
+                        <a class="button feedback-button" href="">Узнать больше</a>
+                    </li>
+                    <li class="slider-item">
+                        <h2 class="slider-slogan">Любим математику<br/> как никто другой</h2>
+                        <p>Никакого креатива, только математические формулы<br/> для расчета идеальных пропорций.</p>
+                        <a class="button feedback-button" href="">Узнать больше</a>
+                    </li>
+                    <li class="slider-item">
+                        <h2 class="slider-slogan">Только ночь,<br/> только хардкор</h2>
+                        <p>Работать днем, как все? Мы против этого.<br/> Ближе к полуночи работа только начинается.</p>
+                        <a class="button feedback-button" href="">Узнать больше</a>
+                    </li>
+                </ul>
             </div>
         </section>
-
-        <!-- здесь будет слайдер  -->
         <div class="container">
             <section class="services">
                 <h2 class="visually-hidden">Предоставляемые услуги</h2>
                 <ul class="services-list">
                     <li class="services-item">
                         <h3>Веб-сайты</h3>
-                        <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+                        <p>Мир никогда не будет прежним<br/> после того как увидит ваш сайт!</p>
                         <img src="img/illustration-1.png" width="300" height="146" alt="">
                         <button class="button services-button services-button-red" type="button">Заказать</button>
                     </li>
                     <li class="services-item">
                         <h3>Приложения</h3>
-                        <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+                        <p>Покорите топ-10 приложений в<br/> AppStore и Google Play</p>
                         <img src="img/illustration-2.png" width="300" height="146" alt="">
                         <button class="button services-button services-button-green" type="button">Заказать</button>
                     </li>
                     <li class="services-item">
                         <h3>Презентации</h3>
-                        <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+                        <p>Вы даже не подозреваете,<br/> насколько вы изумительны!</p>
                         <img src="img/illustration-3.png" width="300" height="146" alt="">
                         <button class="button services-button services-button-yellow" type="button">Заказать</button>
                     </li>
@@ -129,14 +115,18 @@
                     <img class="about_us_logo" src="img/nerds-illustration.png" width="360" height="208" alt="Логотип компании">
                     <p>с 2004 года Любим точность во всем:</p>
                     <dl class="about_us-list">
-                        <dt class="about_us-item">146<sup>%</sup></dt>
-                        <dd>Уровень самоотдачи</dd>
-        
-                        <dt class="about_us-item">100<sup>%</sup></dt>
-                        <dd>Соблюдение сроков</dd>
-        
-                        <dt class="about_us-item">50<sup>%</sup></dt>
-                        <dd>Минимальная предоплата</dd>
+                        <div class="about_us-wrapper">
+                            <dt class="about_us-item">146<sup>%</sup></dt>
+                            <dd>Уровень самоотдачи</dd>
+                        </div>
+                        <div class="about_us-wrapper">
+                            <dt class="about_us-item">100<sup>%</sup></dt>
+                            <dd>Соблюдение сроков</dd>
+                        </div>
+                        <div class="about_us-wrapper">
+                            <dt class="about_us-item">50<sup>%</sup></dt>
+                            <dd>Минимальная предоплата</dd>
+                        </div>
                     </dl>
                 </div>
             </section>
@@ -168,25 +158,29 @@
         </div>
     </main>
     <footer>
-        <img src="img/map group.jpg" width="1440" height="416"
-            alt="Наша компания расположенна по адресу г.Санкт-Петербург, ул. Б. Конюшенная, д. 19/8.">
-        <!-- <iframe
-            src="https://yandex.ru/map-widget/v1/?um=constructor%3A87a75cb30f34949c2490de44389de57343ad0a810ef9255ff4e78256d3013e46&amp;source=constructor"
-            width="100%" height="370" frameborder="0"></iframe> -->
-        <div class="container">
-            <div class="map-feedback">
-                <h2 class="visually-hidden">Контактная информация</h2>
-                <b>Nёrds design studio</b>
-                <p>191186, Санкт-Петербург,<br>
-                    ул. Б. Конюшенная, д. 19/8</p>
-                <p>тел. +7 (812) 275-75-75</p>
-                <a class="button feedback-button" href="#">Напишите нам</a>
+        <div class="map">
+            <!-- <img src="img/map group.jpg" width="1440" height="416"
+                alt="Наша компания расположенна по адресу г.Санкт-Петербург, ул. Б. Конюшенная, д. 19/8."> -->
+            <iframe
+                src="https://yandex.ru/map-widget/v1/?um=constructor%3A87a75cb30f34949c2490de44389de57343ad0a810ef9255ff4e78256d3013e46&amp;source=constructor"
+                width="100%" height="416" frameborder="0"></iframe>
+            <div class="container">
+                <div class="map-feedback">
+                    <h2 class="visually-hidden">Контактная информация</h2>
+                    <b class="feedback-title">Nёrds design studio</b>
+                    <p class="feedback-adds">191186, Санкт-Петербург,<br>
+                        ул. Б. Конюшенная, д. 19/8</p>
+                    <p class="feedback-phone">тел. +7 (812) 275-75-75</p>
+                    <a class="button feedback-button" href="#">Напишите нам</a>
+                </div>
             </div>
+        </div>
+        <div class="container">
             <div class="social-wrapper">
                 <ul class="social">
-                    <li><a class="social-button" href=""></a>vkontakte</li>
-                    <li><a class="social-button" href=""></a>facebook</li>
-                    <li><a class="social-button" href=""></a>instagram</li>
+                    <li><a class="social-button" href="#"><span class="visually-hidden">vkontakte</span></a></li>
+                    <li><a class="social-button" href="#"><span class="visually-hidden">facebook</span></a></li>
+                    <li><a class="social-button" href="#"><span class="visually-hidden">instagram</span></a></li>
                 </ul>
                 <p class="call_to_action">
                     <b>Давайте дружить, это выгодно!</b><br>
