--- a/catalog.html
+++ b/catalog.html
@@ -20,7 +20,7 @@
                 </a>
                 <ul class="navigation-list">
                     <li class="navigation-item">
-                        <a href="#">Студия</a>
+                        <a href="index.html">Студия</a>
                     </li>
                     <li class="navigation-item">
                         <a href="#">Клиенты</a>
@@ -131,19 +131,19 @@
                             <li class="catalog-sort-item"><a href="#">По названию</a></li>
                         </ul>
                         <ul class="catalog-sort-btn">
-                            <li><button class="button-sort-ascending button-sort-ascending-current" type="button">по убыванию</button></li>
-                            <li><button class="button-sort-ascending" type="button"> по возрастанию</button></li>
+                            <li class="sort-btn-item"><a class="button-sort-ascending button-sort-ascending-current" href="#">по убыванию</a></li>
+                            <li class="sort-btn-item"><a class="button-sort-ascending" href="#"> по возрастанию</a></li>
                         </ul>
                     </div>
                     <ul class="catalog-list">
                         <li class="catalog-item">
                             <div class="catalog-item-back">
                                 <a class="catalog-item-img" href="#">
-                                    <img src="/img/img-sedona.jpg" alt="'Sedona' Информационный сайт для туристов">
+                                    <img src="/img/img-sedona.jpg" alt="'Sedona' Информационный сайт для туристов" width="360px" height="576px">
                                 </a>
                                 <div class="catalog-item-hover">
                                     <h3>Sedona</h3>
-                                    <p>Информационный сайт для туристов</p>
+                                    <p>Информационный сайт</br> для туристов</p>
                                     <button class="button catalog-button" type="button">9 900 руб.</button>
                                 </div>
                             </div>
@@ -151,11 +151,11 @@
                         <li class="catalog-item">
                             <div class="catalog-item-back">
                                 <a class="catalog-item-img" href="#">
-                                    <img src="/img/img-pink.jpg" alt="'Pink' Продуктовый лендинг приложения для iOS и Android">
+                                    <img src="/img/img-pink.jpg" alt="'Pink' Продуктовый лендинг приложения для iOS и Android" width="360px" height="576px">
                                 </a>
                                 <div class="catalog-item-hover">
                                     <h3>Pink App</h3>
-                                    <p>Продуктовый лендинг приложения для iOS и Android</p>
+                                    <p>Продуктовый лендинг</br> приложения для iOS и Android</p>
                                     <button class="button catalog-button" type="button">9 900 руб.</button>
                                 </div>
                             </div>
@@ -163,11 +163,11 @@
                         <li class="catalog-item">
                             <div class="catalog-item-back">
                                 <a class="catalog-item-img" href="#">
-                                    <img src="/img/img-barbershop.jpg" alt="'Borodinski' Сайт салона красоты. Для мужчин, да.">
+                                    <img src="/img/img-barbershop.jpg" alt="'Borodinski' Сайт салона красоты. Для мужчин, да." width="360px" height="576px">
                                 </a>
                                 <div class="catalog-item-hover">
                                     <h3>Barbershop</h3>
-                                    <p>Сайт салоны красоты. Для мужчин, да.</p>
+                                    <p>Сайт салоны красоты.</br> Для мужчин, да.</p>
                                     <button class="button catalog-button" type="button">9 900 руб.</button>
                                 </div>
                             </div>
@@ -175,11 +175,11 @@
                         <li class="catalog-item">
                             <div class="catalog-item-back">
                                 <a class="catalog-item-img" href="#">
-                                    <img src="/img/img-mishka.jpg" alt="'Mishka'Интернет-магазин вязаных игрушек">
+                                    <img src="/img/img-mishka.jpg" alt="'Mishka'Интернет-магазин вязаных игрушек" width="360px" height="576px">
                                 </a>
                                 <div class="catalog-item-hover">
                                     <h3>MISHKA</h3>
-                                    <p>Интернет-магазин вязаных игрушек</p>
+                                    <p>Интернет-магазин</br> вязаных игрушек</p>
                                     <button class="button catalog-button" type="button">9 900 руб.</button>
                                 </div>
                             </div>
@@ -187,11 +187,11 @@
                         <li class="catalog-item">
                             <div class="catalog-item-back">
                                 <a class="catalog-item-img" href="#">
-                                    <img src="/img/img-aplus.jpg" alt="'A+' Лендинг курсов повышения квалификации">
+                                    <img src="/img/img-aplus.jpg" alt="'A+' Лендинг курсов повышения квалификации" width="360px" height="576px">
                                 </a>
                                 <div class="catalog-item-hover">
                                     <h3>A Plus</h3>
-                                    <p>Лендинг курсов повышения квалификации</p>
+                                    <p>Лендинг курсов повышения</br> квалификации</p>
                                     <button class="button catalog-button" type="button">9 900 руб.</button>
                                 </div>
                             </div>
@@ -199,18 +199,18 @@
                         <li class="catalog-item">
                             <div class="catalog-item-back">
                                 <a class="catalog-item-img" href="#">
-                                    <img src="/img/img-kvast.jpg" alt="'Кваст' Промо-сайт производителя крафтового кваса">
+                                    <img src="/img/img-kvast.jpg" alt="'Кваст' Промо-сайт производителя крафтового кваса" width="360px" height="576px">
                                 </a>
                                 <div class="catalog-item-hover">
                                     <h3>КВАСТ</h3>
-                                    <p>Промо-сайт производителя крафтового кваса</p>
+                                    <p>Промо-сайт производителя</br> крафтового кваса</p>
                                     <button class="button catalog-button" type="button">9 900 руб.</button>
                                 </div>
                             </div>
                         </li>
                     </ul>
                     <ul class="pagination-list">
-                        <li class="pagination-item pagination-item-current"><a>1</a></li>
+                        <li class="pagination-item"><a class="pagination-item-current">1</a></li>
                         <li class="pagination-item"><a href="#">2</a></li>
                         <li class="pagination-item"><a href="#">3</a></li>
                         <li class="pagination-item pagination-item-next"><a href="#">Следующая</a></li>
@@ -233,7 +233,7 @@
                     <p class="feedback-adds">191186, Санкт-Петербург,<br>
                         ул. Б. Конюшенная, д. 19/8</p>
                     <p class="feedback-phone">тел. +7 (812) 275-75-75</p>
-                    <a class="button feedback-button" href="#">Напишите нам</a>
+                    <a class="button feedback-button" href="#openModal">Напишите нам</a>
                 </div>
             </div>
         </div>
@@ -251,19 +251,21 @@
             </div>
         </div>
     </footer>
-    <section class="modal modal-feedback">
+    <section id="openModal" class="modal modal-feedback">
         <h2 class="visually-hidden">Форма обратной связи</h2>
         <p>Напишите нам</p>
         <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
-            <p>
-                <label class="feedback-form-name" for="feedback-name">Ваше имя:</label>
-                <input class="feedback-form-name" id="feedback-name" type="text" name="name" placeholder="Имя Фамилия">
-            </p>
-            <p>
-                <label class="feedback-form-mail" for="feedback-mail">Ваш e-mail:</label>
-                <input class="feedback-form-mail" id="feedback-mail" type="text" name="mail"
-                    placeholder="email@example.com">
-            </p>
+            <div class="feedback-wrapper">
+                <p>
+                    <label class="feedback-form-name" for="feedback-name">Ваше имя:</label>
+                    <input class="feedback-form-name" id="feedback-name" type="text" name="name" placeholder="Имя Фамилия" required>
+                </p>
+                <p>
+                    <label class="feedback-form-mail" for="feedback-mail">Ваш e-mail:</label>
+                    <input class="feedback-form-mail" id="feedback-mail" type="email" name="mail"
+                        placeholder="email@example.com">
+                </p>
+            </div>
             <p>
                 <label class="feedback-form-text" for="feedback-text">Текст письма:</label>
                 <textarea class="feedback-form-text" name="text" id="feedback-text" cols="90" rows="5"
@@ -272,7 +274,7 @@
             <button class="button feedback-button" type="submit">Отправить</button>
 
         </form>
-        <button class="button feedback-close" type="button">Закрыть</button>
+        <a class="feedback-close" href="#closeModal" aria-label="Закрыть форму"></a>
     </section>
 
 </body>
