--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип дизайн студии Nerds">
                 </a>
                 <ul class="navigation-list">
-                    <li>
+                    <li class="navigation-current">
                         <a href="#">Студия</a>
                     </li>
                     <li>
@@ -171,7 +171,7 @@
                     <p class="feedback-adds">191186, Санкт-Петербург,<br>
                         ул. Б. Конюшенная, д. 19/8</p>
                     <p class="feedback-phone">тел. +7 (812) 275-75-75</p>
-                    <a class="button feedback-button" href="#">Напишите нам</a>
+                    <a class="button feedback-button" href="#openModal">Напишите нам</a>
                 </div>
             </div>
         </div>
@@ -191,19 +191,21 @@
 
 
     </footer>
-    <section class="modal modal-feedback">
+    <section id="openModal" class="modal modal-feedback">
         <h2 class="visually-hidden">Форма обратной связи</h2>
         <p>Напишите нам</p>
         <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
-            <p>
-                <label class="feedback-form-name" for="feedback-name">Ваше имя:</label>
-                <input class="feedback-form-name" id="feedback-name" type="text" name="name" placeholder="Имя Фамилия">
-            </p>
-            <p>
-                <label class="feedback-form-mail" for="feedback-mail">Ваш e-mail:</label>
-                <input class="feedback-form-mail" id="feedback-mail" type="text" name="mail"
-                    placeholder="email@example.com">
-            </p>
+            <div class="feedback-wrapper">
+                <p>
+                    <label class="feedback-form-name" for="feedback-name">Ваше имя:</label>
+                    <input class="feedback-form-name" id="feedback-name" type="text" name="name" placeholder="Имя Фамилия" required>
+                </p>
+                <p>
+                    <label class="feedback-form-mail" for="feedback-mail">Ваш e-mail:</label>
+                    <input class="feedback-form-mail" id="feedback-mail" type="email" name="mail"
+                        placeholder="email@example.com">
+                </p>
+            </div>
             <p>
                 <label class="feedback-form-text" for="feedback-text">Текст письма:</label>
                 <textarea class="feedback-form-text" name="text" id="feedback-text" cols="90" rows="5"
@@ -212,7 +214,7 @@
             <button class="button feedback-button" type="submit">Отправить</button>
 
         </form>
-        <button class="button feedback-close" type="button">Закрыть</button>
+        <a class="feedback-close" href="#closeModal" aria-label="Закрыть форму"></a>
     </section>
 
 </body>
