--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип дизайн студии Nerds">
                 </a>
                 <ul class="navigation-list">
-                    <li>
+                    <li class="navigation-current">
                         <a href="#">Студия</a>
                     </li>
                     <li>
@@ -72,100 +72,6 @@
                     </li>
                 </ul>
             </div>
-<<<<<<< HEAD
-=======
-            <div>
-                <h2 class="slider-slogan">Долго, дорого, скурпулезно</h2>
-                <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
-                <a class="button feedback-button" href="">Узнать больше</a>
-                <img src="img/slide1.png" width="698" height="413" alt="Изображение смартфонов">
-            </div>
-            <div>
-                <h2 class="slider-slogan">Любим математику как никто другой</h2>
-                <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
-                <a class="button feedback-button" href="">Узнать больше</a>
-                <img src="img/slide2.png" width="663" height="430" alt="Изображение мониторов">
-            </div>
-            <div>
-                <h2 class="slider-slogan">Только ночь, только хардкор</h2>
-                <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
-                <a class="button feedback-button" href="">Узнать больше</a>
-                <img src="img/slide3.png" width="759" height="411" alt="Изображение планшета и смартфона">
-            </div>
-        </section>
-
-        <!-- здесь будет слайдер  -->
-        <section class="services">
-            <h2 class="visually-hidden">Предоставляемые услуги</h2>
-            <ul class="services-list">
-                <li class="services-item">
-                    <h3>Веб-сайты</h3>
-                    <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-                    <img src="img/illustration-1.png" width="300" height="146" alt="">
-                    <button class="button services-button services-button-red" type="button">Заказать</button>
-                </li>
-                <li class="services-item">
-                    <h3>Приложения</h3>
-                    <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-                    <img src="img/illustration-2.png" width="300" height="146" alt="">
-                    <button class="button services-button services-button-green" type="button">Заказать</button>
-                </li>
-                <li class="services-item">
-                    <h3>Презентации</h3>
-                    <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-                    <img src="img/illustration-3.png" width="300" height="146" alt="">
-                    <button class="button services-button services-button-yellow" type="button">Заказать</button>
-                </li>
-            </ul>
-        </section>
-        <section class="about_us">
-            <h2 class="visually-hidden">Информация о нас</h2>
-            <p>Мы — маленькая, но гордая<br>
-                дизайн-студия из Краснодара. </p>
-            <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>
-                превыше креатива. Работаем не покладая рук, как роботы.</p>
-            <p>Выполняем заказы на разработку:</p>
-            <ul class="about_us-services-list">
-                <li class="about_us-services-item">Веб-сайтов любой сложности</li>
-                <li class="about_us-services-item">Мобильных приложений для iOS и Android</li>
-                <li class="about_us-services-item">Слайдшоу и видео для корпоративных презентаций</li>
-            </ul>
-            <img class="about_us_logo" src="img/nerds-illustration.png" width="360" height="208" alt="Логотип компании">
-            <p>с 2004 года Любим точность во всем:</p>
-            <dl class="about_us-list">
-                <dt class="about_us-item">146%</dt>
-                <dd>Уровень самоотдачи</dd>
-                <dt class="about_us-item">100%</dt>
-                <dd>Соблюдение сроков</dd>
-                <dt class="about_us-item">50%</dt>
-                <dd>Минимальная предоплата</dd>
-            </dl>
-        </section>
-        <section class="partners">
-            <h2 class="visually-hidden">Наши партнеры</h2>
-            <ul class="partners-list">
-                <li class="partners-item">
-                    <a href="#">
-                        <img src="img/logo-1.png" width="199" height="68" alt="Интерактивные онлайн-курсы htmlacademy">
-                    </a>
-                </li>
-                <li class="partners-item">
-                    <a href="#">
-                        <img src="img/logo-2.png" width="209" height="90" alt="Барбершоп Borodinski">
-                    </a>
-                </li>
-                <li class="partners-item">
-                    <a href="#">
-                        <img src="img/logo-3.png" width="185" height="52" alt="Pink">
-                    </a>
-                </li>
-                <li class="partners-item">
-                    <a href="#">
-                        <img src="img/logo-4.png" width="173" height="84" alt="Mishka">
-                    </a>
-                </li>
-            </ul>
->>>>>>> b74ebcdc0552d589b10af6388791fca036c3d50d
         </section>
         <div class="container">
             <section class="services">
@@ -265,7 +171,7 @@
                     <p class="feedback-adds">191186, Санкт-Петербург,<br>
                         ул. Б. Конюшенная, д. 19/8</p>
                     <p class="feedback-phone">тел. +7 (812) 275-75-75</p>
-                    <a class="button feedback-button" href="#">Напишите нам</a>
+                    <a class="button feedback-button" href="#openModal">Напишите нам</a>
                 </div>
             </div>
         </div>
@@ -285,19 +191,21 @@
 
 
     </footer>
-    <section class="modal modal-feedback">
+    <section id="openModal" class="modal modal-feedback">
         <h2 class="visually-hidden">Форма обратной связи</h2>
         <p>Напишите нам</p>
         <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
-            <p>
-                <label class="feedback-form-name" for="feedback-name">Ваше имя:</label>
-                <input class="feedback-form-name" id="feedback-name" type="text" name="name" placeholder="Имя Фамилия">
-            </p>
-            <p>
-                <label class="feedback-form-mail" for="feedback-mail">Ваш e-mail:</label>
-                <input class="feedback-form-mail" id="feedback-mail" type="text" name="mail"
-                    placeholder="email@example.com">
-            </p>
+            <div class="feedback-wrapper">
+                <p>
+                    <label class="feedback-form-name" for="feedback-name">Ваше имя:</label>
+                    <input class="feedback-form-name" id="feedback-name" type="text" name="name" placeholder="Имя Фамилия" required>
+                </p>
+                <p>
+                    <label class="feedback-form-mail" for="feedback-mail">Ваш e-mail:</label>
+                    <input class="feedback-form-mail" id="feedback-mail" type="email" name="mail"
+                        placeholder="email@example.com">
+                </p>
+            </div>
             <p>
                 <label class="feedback-form-text" for="feedback-text">Текст письма:</label>
                 <textarea class="feedback-form-text" name="text" id="feedback-text" cols="90" rows="5"
@@ -306,7 +214,7 @@
             <button class="button feedback-button" type="submit">Отправить</button>
 
         </form>
-        <button class="button feedback-close" type="button">Закрыть</button>
+        <a class="feedback-close" href="#closeModal" aria-label="Закрыть форму"></a>
     </section>
 
 </body>
