--- a/catalog.html
+++ b/catalog.html
@@ -139,7 +139,7 @@
                         <li class="catalog-item">
                             <div class="catalog-item-back">
                                 <a class="catalog-item-img" href="#">
-                                    <img src="/img/img-sedona.jpg" alt="'Sedona' Информационный сайт для туристов" width="360px" height="576px">
+                                    <img src="img/img-sedona.jpg" alt="'Sedona' Информационный сайт для туристов" width="360px" height="576px">
                                 </a>
                                 <div class="catalog-item-hover">
                                     <h3>Sedona</h3>
@@ -151,7 +151,7 @@
                         <li class="catalog-item">
                             <div class="catalog-item-back">
                                 <a class="catalog-item-img" href="#">
-                                    <img src="/img/img-pink.jpg" alt="'Pink' Продуктовый лендинг приложения для iOS и Android" width="360px" height="576px">
+                                    <img src="img/img-pink.jpg" alt="'Pink' Продуктовый лендинг приложения для iOS и Android" width="360px" height="576px">
                                 </a>
                                 <div class="catalog-item-hover">
                                     <h3>Pink App</h3>
@@ -163,7 +163,7 @@
                         <li class="catalog-item">
                             <div class="catalog-item-back">
                                 <a class="catalog-item-img" href="#">
-                                    <img src="/img/img-barbershop.jpg" alt="'Borodinski' Сайт салона красоты. Для мужчин, да." width="360px" height="576px">
+                                    <img src="img/img-barbershop.jpg" alt="'Borodinski' Сайт салона красоты. Для мужчин, да." width="360px" height="576px">
                                 </a>
                                 <div class="catalog-item-hover">
                                     <h3>Barbershop</h3>
@@ -175,7 +175,7 @@
                         <li class="catalog-item">
                             <div class="catalog-item-back">
                                 <a class="catalog-item-img" href="#">
-                                    <img src="/img/img-mishka.jpg" alt="'Mishka'Интернет-магазин вязаных игрушек" width="360px" height="576px">
+                                    <img src="img/img-mishka.jpg" alt="'Mishka'Интернет-магазин вязаных игрушек" width="360px" height="576px">
                                 </a>
                                 <div class="catalog-item-hover">
                                     <h3>MISHKA</h3>
@@ -187,7 +187,7 @@
                         <li class="catalog-item">
                             <div class="catalog-item-back">
                                 <a class="catalog-item-img" href="#">
-                                    <img src="/img/img-aplus.jpg" alt="'A+' Лендинг курсов повышения квалификации" width="360px" height="576px">
+                                    <img src="img/img-aplus.jpg" alt="'A+' Лендинг курсов повышения квалификации" width="360px" height="576px">
                                 </a>
                                 <div class="catalog-item-hover">
                                     <h3>A Plus</h3>
@@ -199,7 +199,7 @@
                         <li class="catalog-item">
                             <div class="catalog-item-back">
                                 <a class="catalog-item-img" href="#">
-                                    <img src="/img/img-kvast.jpg" alt="'Кваст' Промо-сайт производителя крафтового кваса" width="360px" height="576px">
+                                    <img src="img/img-kvast.jpg" alt="'Кваст' Промо-сайт производителя крафтового кваса" width="360px" height="576px">
                                 </a>
                                 <div class="catalog-item-hover">
                                     <h3>КВАСТ</h3>
